Bug 99620 - [865g v4.4] GPU hang - 3DPRIM overflow
Summary: [865g v4.4] GPU hang - 3DPRIM overflow
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-01-31 20:30 UTC by tpereira
Modified: 2017-02-05 21:07 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
/sys/class/drm/card0/error (728.39 KB, text/plain)
2017-01-31 20:30 UTC, tpereira
no flags Details

Description tpereira 2017-01-31 20:30:11 UTC
Created attachment 129260 [details]
/sys/class/drm/card0/error

Usually within 1 hour of power up, I get the following error, which makes the DE slower:

Jan 31 20:12:54 ghost kernel: ------------[ cut here ]------------
Jan 31 20:12:54 ghost kernel: WARNING: CPU: 1 PID: 2037 at drivers/gpu/drm/i915/i915_gem.c:4508 i915_gem_free_object+0x272/0x2ac [i915]()
Jan 31 20:12:54 ghost kernel: WARN_ON(obj->frontbuffer_bits)
Jan 31 20:12:54 ghost kernel: Modules linked in:
Jan 31 20:12:54 ghost kernel:  snd_usb_audio usbhid uas usb_storage snd_usbmidi_lib uvcvideo videobuf2_vmalloc videobuf2_memops videobuf2_v4l2 videobuf2_core v4l2_common snd_rawmidi videodev i915 snd_intel8x0 uhci_hcd snd_ac97_codec ac97_bus e1000 ehci_pci ehci_hcd i2c_i801 usbcore usb_common
Jan 31 20:12:54 ghost kernel: CPU: 1 PID: 2037 Comm: X Tainted: G        W       4.4.39-gentoo #3
Jan 31 20:12:54 ghost kernel: Hardware name:                  /D865GLC                        , BIOS BF86510A.86A.0063.P18.0406220349 06/22/2004
Jan 31 20:12:54 ghost kernel:  00003286 00003286 f5a83d5c c11e513f f5a83da0 00000001 f5a83d90 c103ee35
Jan 31 20:12:54 ghost kernel:  f85f7f7f f5a83dbc 000007f5 f8601d1c 0000119c f8571f2d 0000119c f8571f2d
Jan 31 20:12:54 ghost kernel:  00000000 e4dc4d80 e4dc4df8 f5a83da8 c103ee90 00000009 f5a83da0 f85f7f7f
Jan 31 20:12:54 ghost kernel: Call Trace:
Jan 31 20:12:54 ghost kernel:  [<c11e513f>] dump_stack+0x47/0x68
Jan 31 20:12:54 ghost kernel:  [<c103ee35>] warn_slowpath_common+0x81/0xae
Jan 31 20:12:54 ghost kernel:  [<f8571f2d>] ? i915_gem_free_object+0x272/0x2ac [i915]
Jan 31 20:12:54 ghost kernel:  [<f8571f2d>] ? i915_gem_free_object+0x272/0x2ac [i915]
Jan 31 20:12:54 ghost kernel:  [<c103ee90>] warn_slowpath_fmt+0x2e/0x30
Jan 31 20:12:54 ghost kernel:  [<f8571f2d>] i915_gem_free_object+0x272/0x2ac [i915]
Jan 31 20:12:54 ghost kernel:  [<c12ab5f2>] drm_gem_object_free+0x20/0x35
Jan 31 20:12:54 ghost kernel:  [<c12ab715>] drm_gem_object_handle_unreference_unlocked+0xb7/0xc0
Jan 31 20:12:54 ghost kernel:  [<c12abb00>] drm_gem_handle_delete+0x7f/0xaf
Jan 31 20:12:54 ghost kernel:  [<c12abff2>] ? drm_gem_handle_create+0x2f/0x2f
Jan 31 20:12:54 ghost kernel:  [<c12ac00a>] drm_gem_close_ioctl+0x18/0x20
Jan 31 20:12:54 ghost kernel:  [<c12ac799>] drm_ioctl+0x134/0x51c
Jan 31 20:12:54 ghost kernel:  [<c12abff2>] ? drm_gem_handle_create+0x2f/0x2f
Jan 31 20:12:54 ghost kernel:  [<c11f68c1>] ? find_next_bit+0x1a/0x1f
Jan 31 20:12:54 ghost kernel:  [<c11e5097>] ? cpumask_any_but+0x23/0x2f
Jan 31 20:12:54 ghost kernel:  [<c10d5ebe>] ? tlb_finish_mmu+0x13/0x34
Jan 31 20:12:54 ghost kernel:  [<c10da3f2>] ? unmap_region+0x92/0xab
Jan 31 20:12:54 ghost kernel:  [<c12ac665>] ? drm_getunique+0x34/0x34
Jan 31 20:12:54 ghost kernel:  [<c110283d>] do_vfs_ioctl+0x307/0x4d6
Jan 31 20:12:54 ghost kernel:  [<c10eef3d>] ? kmem_cache_free+0xd9/0xdb
Jan 31 20:12:54 ghost kernel:  [<c10da491>] ? remove_vma+0x39/0x3f
Jan 31 20:12:54 ghost kernel:  [<c10da491>] ? remove_vma+0x39/0x3f
Jan 31 20:12:54 ghost kernel:  [<c10dbe20>] ? do_munmap+0x1ce/0x2ea
Jan 31 20:12:54 ghost kernel:  [<c1102a73>] SyS_ioctl+0x67/0x78
Jan 31 20:12:54 ghost kernel:  [<c1001296>] do_fast_syscall_32+0x84/0x119
Jan 31 20:12:54 ghost kernel:  [<c14fdecd>] sysenter_past_esp+0x36/0x55
Jan 31 20:12:54 ghost kernel: ---[ end trace 21db04363a3c0f26 ]---
Jan 31 20:13:57 ghost kernel: [drm] stuck on render ring
Jan 31 20:13:57 ghost kernel: [drm] GPU HANG: ecode 2:0:0x7c7bff03, in X [2037], reason: Ring hung, action: reset
Jan 31 20:13:57 ghost kernel: [drm] GPU hangs can indicate a bug anywhere in the entire gfx stack, including userspace.
Jan 31 20:13:57 ghost kernel: [drm] Please file a _new_ bug report on bugs.freedesktop.org against DRI -> DRM/Intel
Jan 31 20:13:57 ghost kernel: [drm] drm/i915 developers can then reassign to the right component if it's not a kernel issue.
Jan 31 20:13:57 ghost kernel: [drm] The gpu crash dump is required to analyze gpu hangs, so please always attach it.
Jan 31 20:13:57 ghost kernel: [drm] GPU crash dump saved to /sys/class/drm/card0/error
Jan 31 20:13:57 ghost kernel: drm/i915: Resetting chip after gpu hang
Jan 31 20:13:57 ghost kernel: [drm:i915_reset [i915]] *ERROR* Failed to reset chip: -19
Comment 1 Chris Wilson 2017-02-05 20:41:20 UTC
Ah, note to self, we still don't have a method to reset gen2.
Comment 2 Chris Wilson 2017-02-05 21:07:41 UTC
commit 38ac6b556dae914325980d135a81719c9dfda000
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Sun Feb 5 20:58:37 2017 +0000

    sna/gen2: Cap number of vertices emitted in a single 3DPRIM
    
    There's a maximum of 2^18 dwords in a single command, or else we
    overflow the length field.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=99620
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.