sna/gen2: Cap number of vertices emitted in a single 3DPRIM

There's a maximum of 2^18 dwords in a single command, or else we
overflow the lenth field.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=99620
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>